Display filename, allow saving

--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
 		  
 		  <a class="button green browse" style=cursor:pointer;width:446px;height:62px;line-height:62px;margin-bottom:13px;text-align onClick=document.getElementById('send').click()>send a file</a>
 		  
-			<a class='button download red' id=downloadLink style=cursor:pointer;width:446px;height:62px;line-height:62px;margin-bottom:13px;text-transform:none;>Hallo.zip - 3MB</a>
+			<a class='button download red' id=downloadLink style=cursor:default;width:446px;height:62px;line-height:62px;margin-bottom:13px;text-transform:none;opacity:.1>waiting for files</a>
 			
 			<small>Send files <b>peer-to-peer</b> and <b>end-to-end</b> encrypted.</small><br>
 			<small>Host it yourself! <a href=https://github.com/pguth/peertransfer class=github>Github</a> has the source.</small>
