--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<div class=content style=width:436px;margin-left:auto;margin-right:auto;margin-top:10vh;margin-bottom:100px;>
 
     <a id=newMesh style=width:100%;text-align:center; alt='create new mesh'>⟳ new mesh</a>
-    
+
     <input type=url id=url onClick=this.select() readonly>
 
 	  <a id=uploadLink class='button magenta receive' style=cursor:default;width:100%;height:62px;line-height:62px;margin-bottom:13px;opacity:.8;>waiting for peers</a>
@@ -21,9 +21,9 @@
 
 		<small>Start a <b>fully meshed network</b> by passing on the generated link and share files <b>peer-to-peer</b> and <b>end-to-end encrypted</b> powered by WebRTC!</small><br>
 		<small>Host it yourself! <a href=https://github.com/pguth/peermesh class=github>Github</a> has the source.</small>
+		<small style='display:block;opacity:0.5;padding-top:7px;'><code id=version></code></small>
 	</div>
 </div>
 <input type=file id=send style=display:none; />
 
 <script src=bundle.js></script>
-<img src="https://analytics.guth.so/fair-tracking.php?idsite=31&rec=1" style="border:0" alt="" />
